[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Volley.gd" type="Script" id=1]
[ext_resource path="res://Scripts/HitBox.gd" type="Script" id=2]
[ext_resource path="res://assets/spritesheets/Gankyu.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 900, 0, 100, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 1000, 0, 100, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 1100, 0, 100, 64 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
height = 11.5228

[node name="Beam" type="Node2D"]
script = ExtResource( 1 )
velocity = Vector2( 0, 120 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1.5, 9 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="HitBox" type="Area2D" parent="." groups=[
"enemy_hitbox",
"projectile",
]]
position = Vector2( 0, 11 )
script = ExtResource( 2 )
damage = 10
knockback = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 5 )
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
